Revert to language code 11